# agent-trace-redactor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-session.jsonl  config.json
src/agent_trace_redactor/: __init__.py  __main__.py  api.py  cli.py  config.py  defaults.py  diff.py  engine.py  errors.py  formats.py  io.py  models.py  placeholders.py  reporting.py  utils.py
tests/: test_cli.py  test_config.py  test_engine.py  test_formats_io_api.py
